# securities-report-rag

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: project_initial_prd.md
docs/design/: 01_system_architecture.md  02_rag_pipeline.md  03_data_model.md  04_security.md
docs/implementation/: 01_skeleton_code_overview.md  02_api_integration_and_incremental_rollback.md
scripts/: check_slack_setup.py  run_pipeline.py  run_slack_bot.py
src/: __init__.py  config.py  logging_utils.py  models.py  security.py
src/pipeline/: __init__.py  chunker.py  embedder.py  metadata.py  parser.py  registry.py  runner.py
src/rag/: __init__.py  chain.py  prompts.py  retriever.py
src/slack/: __init__.py  app.py  handlers.py
tests/: test_metadata.py  test_parser_chunker.py  test_registry_runner.py  test_retriever.py  test_security.py
